correcting overlaping text in skills section

--- a/style.css
+++ b/style.css
@@ -68,12 +68,11 @@ section .title::before{
 }
 section .title::after{
     position: absolute;
-    bottom: -8px;
+    bottom: -50px;
     left: 50%;
     font-size: 20px;
     color: brown;
     padding: 0 5px;
-    background: #fff;
     transform: translateX(-50%);
 }
 /* footer section */
